--- a/people-noetic/leg_detector/cfg/LegDetector.cfg
+++ b/people-noetic/leg_detector/cfg/LegDetector.cfg
@@ -19,7 +19,7 @@ gen.add('max_second_leg_age',       double_t,   0, '[s]', 2.0, 0, 5)
 gen.add('max_track_jump',           double_t,   0, '[m]', 1.0, 0, 5)
 gen.add('max_meas_jump',            double_t,   0, '[m]', 0.75, 0, 5)
 gen.add('leg_pair_separation',      double_t,   0, '[m]', 1.0, 0, 2)
-gen.add('fixed_frame',              str_t,      0, 'Fixed Frame', 'odom_combined')
+gen.add('fixed_frame',              str_t,      0, 'Fixed Frame', 'odom')
 
 gen.add('kalman_p',                 double_t,   0, '',    4, 0, 10)
 gen.add('kalman_q',                 double_t,   0, '', .002, 0, 10)
