--- a/wheelchair/param/laser_back_rp.yaml
+++ b/wheelchair/param/laser_back_rp.yaml
@@ -22,3 +22,11 @@ scan_filter_chain:
       max_range: 8.0
       max_range_difference: 0.05
       filter_window: 2
+
+  - name: shadows
+    type: laser_filters/ScanShadowsFilter
+    params:
+      min_angle: 10
+      max_angle: 170
+      neighbors: 20
+      window: 1
