kamera cikartildi, yeni harita eklendi, bazı ufak değişiklikler

--- a/wheelchair/params/laser_front_rp.yaml
+++ b/wheelchair/params/laser_front_rp.yaml
@@ -4,6 +4,8 @@ scan_filter_chain:
     type: laser_filters/LaserScanAngularBoundsFilter
     params:
       lower_angle: -1.4835
+      # lower_angle: -3.14
+      # upper_angle: 3.14
       upper_angle: 1.36
 
   - name: range
